--- a/k9mail/src/main/res/values/colors.xml
+++ b/k9mail/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="message_list_item_footer_background">#eeeeee</color>
 
-    <color name="colorPrimary">#DB4437</color>
-    <color name="colorPrimaryDark">#B93221</color>
-    <color name="colorAccent">#4285F4</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorAccent">#607D8B</color>
 
     <color name="light_black">#444</color>
 </resources>
