--- a/k9mail/src/main/res/layout/message_list_item.xml
+++ b/k9mail/src/main/res/layout/message_list_item.xml
@@ -39,7 +39,7 @@
 
     </LinearLayout>
 
-    <com.fsck.k9.view.MaterialQuickContactBadge
+    <com.fsck.k9.view.CustomQuickContactBadge
             android:id="@+id/contact_badge"
             android:layout_marginRight="8dip"
             android:layout_marginTop="4dip"
