--- a/k9mail/src/main/res/layout/message_view_header.xml
+++ b/k9mail/src/main/res/layout/message_view_header.xml
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical" >
 
-                    <com.fsck.k9.view.MaterialQuickContactBadge
+                    <com.fsck.k9.view.CustomQuickContactBadge
                         android:id="@+id/contact_badge"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
