--- a/k9mail/src/main/res/layout/recipient_alternate_item.xml
+++ b/k9mail/src/main/res/layout/recipient_alternate_item.xml
@@ -16,7 +16,7 @@
         android:id="@+id/alternate_container_header"
         >
 
-        <com.fsck.k9.view.MaterialQuickContactBadge
+        <com.fsck.k9.view.CustomQuickContactBadge
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_marginLeft="12dp"
