--- a/k9mail/src/main/res/values/colors.xml
+++ b/k9mail/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#607D8B</color>
+    <color name="colorAccent">#E91E63</color>
 
     <color name="light_black">#444</color>
 </resources>
