--- a/k9mail/src/main/res/layout/actionbar_custom.xml
+++ b/k9mail/src/main/res/layout/actionbar_custom.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="start"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@android:color/white"
+                android:textColor="?actionbarTitleColor"
                 android:maxLines="1"/>
 
             <TextView
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@android:color/white"
+                android:textColor="?actionbarTitleColor"
                 android:maxLines="1"/>
         </LinearLayout>
 
