--- a/k9mail/src/main/res/values/themes.xml
+++ b/k9mail/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
     <style name="Theme.K9.Dark.Base" parent="Theme.AppCompat" />
 
     <style name="Theme.K9.Light.Common" parent="Theme.K9.Light.Base">
+        <item name="actionbarTitleColor">@android:color/white</item>
+
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -81,6 +83,8 @@
     </style>
 
     <style name="Theme.K9.Dark.Common" parent="Theme.K9.Dark.Base">
+        <item name="actionbarTitleColor">@android:color/white</item>
+
         <item name="iconFolder">@drawable/folder_dark</item>
         <item name="iconListItemMenu">@drawable/dropdown_ic_arrow_normal_holo_dark</item>
         <item name="iconMenuInfoDetails">@android:drawable/ic_menu_info_details</item>
@@ -147,6 +151,18 @@
 
     <style name="Theme.K9.Light" parent="Theme.K9.Light.Common" />
     <style name="Theme.K9.Dark" parent="Theme.K9.Dark.Common" />
+
+    <style name="Theme.K9.Blue" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Blue</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Blue</item>
+        <item name="colorPrimary">@color/colorPrimary_Blue</item>
+    </style>
+
+    <style name="Theme.K9.Red" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Red</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Red</item>
+        <item name="colorPrimary">@color/colorPrimary_Red</item>
+    </style>
 
     <style name="Theme.K9.Dialog.Light" parent="Theme.K9.Light">
         <item name="backgroundColorChooseAccountHeader">#cccccc</item>
