--- a/k9mail/src/main/res/values/colors.xml
+++ b/k9mail/src/main/res/values/colors.xml
@@ -18,6 +18,10 @@
     <color name="colorPrimaryDark_Blue_Light">#027CB7</color>
     <color name="colorAccent_Blue_Light">#039BE5</color>
 
+    <color name="colorPrimary_Teal">#009688</color>
+    <color name="colorPrimaryDark_Teal">#00796B</color>
+    <color name="colorAccent_Teal">#009688</color>
+
     <color name="colorPrimary_Red">#DB4437</color>
     <color name="colorPrimaryDark_Red">#B93221</color>
     <color name="colorAccent_Red">#4285F4</color>
@@ -38,9 +42,13 @@
     <color name="colorPrimaryDark_Orange">#CC461B</color>
     <color name="colorAccent_Orange">#FF5722</color>
 
-    <color name="colorPrimary_Cardinal_Red">#FF1744</color>
-    <color name="colorPrimaryDark_Cardinal_Red">#CC1236</color>
-    <color name="colorAccent_Cardinal_Red">#FF1744</color>
+    <color name="colorPrimary_Brown">#795548</color>
+    <color name="colorPrimaryDark_Brown">#5D4037</color>
+    <color name="colorAccent_Brown">#795548</color>
+
+    <color name="colorPrimary_Pink">#E91E63</color>
+    <color name="colorPrimaryDark_Pink">#C2185B</color>
+    <color name="colorAccent_Pink">#E91E63</color>
 
     <color name="colorPrimary_Purple">#9C27B0</color>
     <color name="colorPrimaryDark_Purple">#7D1F8D</color>
