--- a/k9mail/src/main/res/layout/message_list.xml
+++ b/k9mail/src/main/res/layout/message_list.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.fsck.k9.view.ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+                               android:id="@+id/container"
+                               android:layout_width="fill_parent"
+                               android:layout_height="fill_parent">
 
     <FrameLayout
         android:id="@+id/message_list_container"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:src="@drawable/ic_create_white"/>
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/message_view_container"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"/>
 
 </com.fsck.k9.view.ViewSwitcher>
