Change folder list menu items and add better searchview for searching folders

--- a/k9mail/src/main/res/menu/folder_list_option.xml
+++ b/k9mail/src/main/res/menu/folder_list_option.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/filter_folders"
         android:icon="?attr/iconActionSearchFolder"
-        app:showAsAction="always|collapseActionView"
+        app:showAsAction="never"
         android:title="@string/filter_folders_action"
         app:actionViewClass="android.widget.SearchView"/>
     <item
