--- a/k9mail/src/main/res/menu/message_list_option.xml
+++ b/k9mail/src/main/res/menu/message_list_option.xml
@@ -47,7 +47,7 @@
         android:id="@+id/check_mail"
         android:alphabeticShortcut="r"
         android:icon="?attr/iconActionRefresh"
-        app:showAsAction="always"
+        app:showAsAction="never"
         android:title="@string/check_mail_action"/>
 
     <!-- MessageView -->
@@ -150,7 +150,7 @@
     <item
         android:id="@+id/set_sort"
         android:icon="?attr/iconActionSort"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:title="@string/sort_by">
         <menu>
             <item
