--- a/k9mail/src/main/res/layout/actionbar_custom.xml
+++ b/k9mail/src/main/res/layout/actionbar_custom.xml
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="12dip"
             android:paddingRight="12dip"
-            android:textColor="?android:attr/textColorTertiary"
+            android:textColor="?actionbarTitleColor"
             android:textSize="36sp" />
     </LinearLayout>
 
@@ -65,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
+            android:textColor="?actionbarTitleColor"
             android:textSize="16sp" />
     </LinearLayout>
 
