--- a/k9mail/src/main/res/menu/accounts_option.xml
+++ b/k9mail/src/main/res/menu/accounts_option.xml
@@ -5,7 +5,8 @@
     <item
         android:id="@+id/search"
         android:icon="?attr/iconActionSearch"
-        app:showAsAction="always"
+        app:showAsAction="collapseActionView|always"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="@string/search_action"/>
     <item
         android:id="@+id/check_mail"
