--- a/k9mail/src/main/res/values/themes.xml
+++ b/k9mail/src/main/res/values/themes.xml
@@ -82,6 +82,10 @@
     <style name="Theme.K9.Dark.Common" parent="Theme.K9.Dark.Base">
         <item name="actionbarTitleColor">@android:color/white</item>
 
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorPrimary</item>s
+
         <item name="iconFolder">@drawable/folder_dark</item>
         <item name="iconListItemMenu">@drawable/dropdown_ic_arrow_normal_holo_dark</item>
         <item name="iconMenuInfoDetails">@android:drawable/ic_menu_info_details</item>
@@ -157,13 +161,43 @@
         <item name="colorPrimary">@color/colorPrimary_Blue</item>
     </style>
 
-    <style name="Theme.K9.Blue_Light" parent="Theme.K9.Light.Common">
+    <style name="Theme.K9.Blue.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Blue</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Blue</item>
+        <item name="colorPrimary">@color/colorPrimary_Blue</item>
+    </style>
+
+    <style name="Theme.K9.Blue.Light" parent="Theme.K9.Light.Common">
         <item name="colorAccent">@color/colorAccent_Blue_Light</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_Blue_Light</item>
         <item name="colorPrimary">@color/colorPrimary_Blue_Light</item>
     </style>
 
+    <style name="Theme.K9.Blue.Light.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Blue_Light</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Blue_Light</item>
+        <item name="colorPrimary">@color/colorPrimary_Blue_Light</item>
+    </style>
+
+    <style name="Theme.K9.Teal" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Teal</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Teal</item>
+        <item name="colorPrimary">@color/colorPrimary_Teal</item>
+    </style>
+
+    <style name="Theme.K9.Teal.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Teal</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Teal</item>
+        <item name="colorPrimary">@color/colorPrimary_Teal</item>
+    </style>
+
     <style name="Theme.K9.Red" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Red</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Red</item>
+        <item name="colorPrimary">@color/colorPrimary_Red</item>
+    </style>
+
+    <style name="Theme.K9.Red.Dark" parent="Theme.K9.Dark.Common">
         <item name="colorAccent">@color/colorAccent_Red</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_Red</item>
         <item name="colorPrimary">@color/colorPrimary_Red</item>
@@ -175,7 +209,19 @@
         <item name="colorPrimary">@color/colorPrimary_Dark_Grey</item>
     </style>
 
+    <style name="Theme.K9.Dark_Grey.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Dark_Grey</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Dark_Grey</item>
+        <item name="colorPrimary">@color/colorPrimary_Dark_Grey</item>
+    </style>
+
     <style name="Theme.K9.Green" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Green</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Green</item>
+        <item name="colorPrimary">@color/colorPrimary_Green</item>
+    </style>
+
+    <style name="Theme.K9.Green.Dark" parent="Theme.K9.Dark.Common">
         <item name="colorAccent">@color/colorAccent_Green</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_Green</item>
         <item name="colorPrimary">@color/colorPrimary_Green</item>
@@ -187,13 +233,55 @@
         <item name="colorPrimary">@color/colorPrimary_Yellow</item>
     </style>
 
+    <style name="Theme.K9.Yellow.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Yellow</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Yellow</item>
+        <item name="colorPrimary">@color/colorPrimary_Yellow</item>
+    </style>
+
     <style name="Theme.K9.Orange" parent="Theme.K9.Light.Common">
         <item name="colorAccent">@color/colorAccent_Orange</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_Orange</item>
         <item name="colorPrimary">@color/colorPrimary_Orange</item>
     </style>
 
+    <style name="Theme.K9.Orange.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Orange</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Orange</item>
+        <item name="colorPrimary">@color/colorPrimary_Orange</item>
+    </style>
+
+    <style name="Theme.K9.Brown" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Brown</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Brown</item>
+        <item name="colorPrimary">@color/colorPrimary_Brown</item>
+    </style>
+
+    <style name="Theme.K9.Brown.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Brown</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Brown</item>
+        <item name="colorPrimary">@color/colorPrimary_Brown</item>
+    </style>
+
+    <style name="Theme.K9.Pink" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Pink</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Pink</item>
+        <item name="colorPrimary">@color/colorPrimary_Pink</item>
+    </style>
+
+    <style name="Theme.K9.Pink.Dark" parent="Theme.K9.Dark.Common">
+        <item name="colorAccent">@color/colorAccent_Pink</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Pink</item>
+        <item name="colorPrimary">@color/colorPrimary_Pink</item>
+    </style>
+
     <style name="Theme.K9.Purple" parent="Theme.K9.Light.Common">
+        <item name="colorAccent">@color/colorAccent_Purple</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark_Purple</item>
+        <item name="colorPrimary">@color/colorPrimary_Purple</item>
+    </style>
+
+    <style name="Theme.K9.Purple.Dark" parent="Theme.K9.Dark.Common">
         <item name="colorAccent">@color/colorAccent_Purple</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_Purple</item>
         <item name="colorPrimary">@color/colorPrimary_Purple</item>
