Adjust all message view animations to translate in/out from/to bottom

--- a/k9mail/src/main/res/anim/slide_in_left.xml
+++ b/k9mail/src/main/res/anim/slide_in_left.xml
@@ -2,7 +2,8 @@
 
     <translate
         android:duration="@android:integer/config_mediumAnimTime"
-        android:fromXDelta="-100%p"
-        android:toXDelta="0" />
+        android:fromYDelta="75%p"
+        android:toYDelta="0%p"
+        android:fillAfter="true" />
 
 </set>
