--- a/k9mail/src/main/res/layout-land/actionbar_custom.xml
+++ b/k9mail/src/main/res/layout-land/actionbar_custom.xml
@@ -22,17 +22,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="start"
-                android:singleLine="true"
-                android:textSize="14sp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="?actionbarTitleColor"
+                android:textSize="14sp"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/actionbar_title_sub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="12sp" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="?actionbarTitleColor"
+                android:textSize="12sp"
+                android:maxLines="1"/>
         </LinearLayout>
 
         <ProgressBar
@@ -46,11 +49,12 @@
         <TextView
             android:id="@+id/actionbar_unread_count"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:paddingLeft="12dip"
             android:paddingRight="12dip"
-            android:textColor="?android:attr/textColorTertiary"
-            android:textSize="32sp" />
+            android:textColor="?actionbarTitleColor"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -64,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
+            android:textColor="?actionbarTitleColor"
             android:textSize="16sp" />
     </LinearLayout>
 
