--- a/k9mail/src/main/res/layout/actionbar_custom.xml
+++ b/k9mail/src/main/res/layout/actionbar_custom.xml
@@ -47,11 +47,12 @@
         <TextView
             android:id="@+id/actionbar_unread_count"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:paddingLeft="12dip"
             android:paddingRight="12dip"
             android:textColor="?actionbarTitleColor"
-            android:textSize="36sp" />
+            android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
