--- a/k9mail/src/main/res/layout/message_view_attachment.xml
+++ b/k9mail/src/main/res/layout/message_view_attachment.xml
@@ -12,7 +12,6 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/messageViewAttachmentBackground"
             android:gravity="center_vertical">
             <ImageView
                 android:id="@+id/attachment_icon"
@@ -51,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="?android:attr/buttonStyleSmall"
+                android:textSize="10sp"
                 android:paddingLeft="20dip"
                 android:paddingRight="20dip"
                 android:text="@string/message_view_attachment_download_action"
@@ -63,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="?android:attr/buttonStyleSmall"
+                android:textSize="10sp"
                 android:paddingLeft="20dip"
                 android:paddingRight="20dip"
                 android:text="@string/message_view_attachment_view_action"
@@ -72,14 +73,5 @@
                 android:layout_below="@id/attachment_name"
                 android:layout_marginTop="6dip" />
         </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_vertical">
-        <ImageView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:src="@drawable/ic_email_attachment" />
     </LinearLayout>
 </com.fsck.k9.ui.messageview.AttachmentView>
