--- a/k9mail/src/main/res/anim/slide_in_left.xml
+++ b/k9mail/src/main/res/anim/slide_in_left.xml
@@ -1,9 +1,8 @@
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--message list when leaving message-->
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
-        android:fromYDelta="75%p"
-        android:toYDelta="0%p"
-        android:fillAfter="true" />
+        android:duration="0"
+        />
 
 </set>
