--- a/k9mail/src/main/res/anim/slide_in_right.xml
+++ b/k9mail/src/main/res/anim/slide_in_right.xml
@@ -1,9 +1,14 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <!--message enter message-->
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
-        android:fromYDelta="75%p"
+        android:duration="2000"
+        android:fromYDelta="10%p"
         android:toYDelta="0%p"
-        android:fillAfter="true"/>
+        />
+    <alpha
+        android:duration="2000"
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0"/>
 
 </set>
