--- a/k9mail/src/main/res/anim/slide_out_right.xml
+++ b/k9mail/src/main/res/anim/slide_out_right.xml
@@ -1,9 +1,14 @@
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--message leaving message-->
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
-        android:fromYDelta="0%p" android:toYDelta="100%p" android:fillAfter="true"
-        android:interpolator="@android:anim/linear_interpolator" />
+        android:duration="2000"
+        android:fromYDelta="0%p"
+        android:toYDelta="10%p"/>
+    <alpha
+        android:duration="2000"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0"/>
 
 
 </set>
