--- a/k9mail/src/main/res/anim/slide_in_left.xml
+++ b/k9mail/src/main/res/anim/slide_in_left.xml
@@ -2,7 +2,9 @@
 
     <!--message list when leaving message-->
     <translate
-        android:duration="0"
+        android:duration="@android:integer/config_mediumAnimTime"
+        android:fromYDelta="0%p"
+        android:toYDelta="0%p"
         />
 
 </set>
