--- a/k9mail/src/main/res/layout/actionbar_custom.xml
+++ b/k9mail/src/main/res/layout/actionbar_custom.xml
@@ -46,13 +46,13 @@
 
         <TextView
             android:id="@+id/actionbar_unread_count"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
-            android:paddingLeft="12dip"
-            android:paddingRight="12dip"
+            android:background="@drawable/circle_background"
             android:textColor="?actionbarTitleColor"
-            android:textSize="24sp" />
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
