--- a/k9mail/src/main/res/layout/accounts_folders_icons.xml
+++ b/k9mail/src/main/res/layout/accounts_folders_icons.xml
@@ -21,8 +21,8 @@
 
         <View
             android:id="@+id/flagged_message_count_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp" />
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
 
         <TextView
             android:id="@+id/flagged_message_count"
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:ellipsize="end"
+            android:textSize="16dp"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
@@ -47,8 +48,8 @@
 
         <View
             android:id="@+id/new_message_count_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"/>
+            android:layout_width="24dp"
+            android:layout_height="24dp"/>
 
         <TextView
             android:id="@+id/new_message_count"
@@ -56,6 +57,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:ellipsize="end"
+            android:textSize="16dp"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     </LinearLayout>
